# iqadatasets

./: README.md  image_pairs_mos.csv  image_pairs_mos_contrastive.csv  nbdev.yml  pyproject.toml  settings.ini
Checks/: checking_same_dataset.ipynb
Notebooks/: index.ipynb  nbdev.yml  sidebar.yml
Notebooks/00_create_csv/: 00_loading_live.ipynb  01_loading_pipal.ipynb  02_loading_tid2008.ipynb  03_loading_tid2013.ipynb  04_loading_bapps.ipynb
Notebooks/01_datasets/: 01_00_live.ipynb  01_01_tid2008.ipynb  01_02_tid2013.ipynb  01_03_kadik10k.ipynb  01_04_pipal.ipynb  01_05_bapps.ipynb  01_05_tid2008_contrastive.ipynb
Notebooks/02_visualization/: 02_00_visualizing_tid2008.ipynb
iqadatasets/: _modidx.py  bapps.py  live.py
iqadatasets/datasets/: __init__.py  bapps.py  kadik10k.py  live.py  pipal.py  tid2008.py  tid2013.py
loadinglive/: _modidx.py  pipal.py  tid2008.py  tid2013.py
loadinglive/datasets/: tid2013.py
src/iqadatasets/: __init__.py
src/iqadatasets/datasets/: bapps.py  kadik10k.py  live.py  pipal.py  tid2008.py  tid2013.py
